--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 	</template>
 
 	<div class="background"></div>
-	<div class="logo"></div>
+	<!-- <div class="logo"></div> -->
 	<div class="main">
 		<div class="result-box box">
 			<canvas class="result-canvas" width="500" height="500"></canvas>
