add styling to general text and names

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 					<div class="talent-select-image">
 						<img class="talent-select-image__image" src="https://picsum.photos/300">
 					</div>
-					<div class="talent-select-name fusion-name">Name here</div>
+					<div class="talent-select-name">Name here</div>
 					<input class="talent-select-input" type="text">
 				</div>
 			</div>
