create info popup and info button

--- a/src/index.html
+++ b/src/index.html
@@ -34,5 +34,17 @@
 			<div class="result-buttons"></div>
 		</div>
 	</div>
+
+	<div class="info-button"></div>
+
+	<div class="info">
+		<button class="background-backwards">&lt;bg</button>
+		<button class="background-forwards">bg&gt;</button>
+		<button class="background-random">bg rnd</button>
+		<div>current progress</div>
+		<div>possible variations</div>
+		<div>credits</div>
+		<div>links</div>
+	</div>
 </body>
 </html>
