--- a/src/index.html
+++ b/src/index.html
@@ -41,8 +41,8 @@
 		<button class="background-backwards">&lt;bg</button>
 		<button class="background-forwards">bg&gt;</button>
 		<button class="background-random">bg rnd</button>
-		<div>current progress</div>
-		<div>possible variations</div>
+		<div>current progress: <span class="current-progress"></span> / 50+ talents</div>
+		<div>possible variations: <span class="possible-variations"></span></div>
 		<div>credits</div>
 		<div>links</div>
 	</div>
