implement info-button image

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
 		<div class="no-script"><p class="script__text">Please enable Javascript</p></div>
 	</noscript>
 
+	<div class="preload"></div>
 	<div class="background"></div>
 	<div class="main">
 		<div class="result-box box">
