--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 	</template>
 
 	<noscript>
-		<div class="no-script"><p class="script__text">Please enable Javascript</p></div>
+		<div class="no-script"><p class="no-script__text">Please enable Javascript</p></div>
 	</noscript>
 
 	<div class="preload"></div>
