add info close button

--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,7 @@
 		<div>possible variations: <span class="possible-variations"></span></div>
 		<div>credits</div>
 		<div>links</div>
+		<img class="info__close" src="images/info-close.svg">
 	</div>
 </body>
 </html>
