--- a/src/index.html
+++ b/src/index.html
@@ -5,21 +5,25 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>HLFG</title>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
 	<template class="template-talent-select-box">
-		<div class="talent-select-container">
+		<section class="talent-select-container">
 			<div class="talent-select-box box">
 				<div class="talent-select-content">
 					<div class="talent-select-image">
 						<img class="talent-select-image__image" src="https://picsum.photos/300">
 					</div>
-					<div class="talent-select-name">Name here</div>
-					<input class="talent-select-input" type="text">
+					<div class="talent-select-name name">Name here</div>
+					<div class="talent-select-icons">
+						<img class="icon" src="images/up.svg">
+						<img class="icon" src="images/down.svg">
+						<img class="icon icon-random" src="images/random.svg">
+					</div>
 				</div>
 			</div>
-		</div>
+		</section>
 	</template>
 
 	<noscript>
@@ -28,23 +32,34 @@
 
 	<div class="preload"></div>
 	<div class="background"></div>
+	<header class="header">
+		<div class="header__title">hololive fusion generator</div>
+		<div class="info-button"></div>
+	</header>
 	<div class="main">
-		<div class="result-box box">
+		<section class="result-box box">
 			<canvas class="result-canvas" width="500" height="500"></canvas>
-			<div class="result-name">Name here</div>
-			<div class="result-buttons"></div>
-		</div>
+			<div class="result-name name">Name here</div>
+			<div class="result-icons">
+				<img class="icon" src="images/swap.svg">
+				<img class="icon icon-random" src="images/random.svg">
+				<div class="result-icons__screenshot">
+					<img class="icon" src="images/screenshot.svg">
+				</div>
+			</div>
+		</section>
 	</div>
-	<div class="info-button"></div>
-	<div class="info">
-		<button class="background-backwards">&lt;bg</button>
-		<button class="background-forwards">bg&gt;</button>
-		<button class="background-random">bg rnd</button>
-		<div>current progress: <span class="current-progress"></span> / 50+ talents</div>
-		<div>possible variations: <span class="possible-variations"></span></div>
-		<div>credits</div>
-		<div>links</div>
+	<section class="info">
 		<img class="info__close" src="images/info-close.svg">
-	</div>
+		<div class="info__inner">
+			<button class="background-backwards">&lt;bg</button>
+			<button class="background-forwards">bg&gt;</button>
+			<button class="background-random">bg rnd</button>
+			<div>current development progress: <span class="current-progress"></span> / 50+ talents</div>
+			<div>possible variations: <span class="possible-variations"></span></div>
+			<div>credits</div>
+			<div>links</div>
+		</div>
+	</section>
 </body>
 </html>
