use background-image property instead of <img> for talent select image, preserve aspect ratio

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,7 @@
 		<section class="talent-select-container">
 			<div class="talent-select-box box">
 				<div class="talent-select-content">
-					<div class="talent-select-image">
-						<img class="talent-select-image__image" src="https://picsum.photos/300">
-					</div>
+					<div class="talent-select-image"></div>
 					<div class="talent-dropdown">
 						<div class="talent-dropdown-content">
 							<div class="talent-dropdown-entries"></div>
