convert icon <img> to <button>

--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,9 @@
 						<div class="talent-select-name__name name">Name here</div>
 					</div>
 					<div class="talent-select-icons">
-						<img class="icon icon-up" src="images/up.svg">
-						<img class="icon icon-down" src="images/down.svg">
-						<img class="icon icon-random" src="images/random.svg">
+						<button class="icon icon-up"></button>
+						<button class="icon icon-down"></button>
+						<button class="icon icon-random"></button>
 					</div>
 				</div>
 			</div>
@@ -53,10 +53,10 @@
 			<canvas class="result-canvas" width="500" height="500"></canvas>
 			<div class="result-name name">Name here</div>
 			<div class="result-icons">
-				<img class="icon icon-swap" src="images/swap.svg">
-				<img class="icon icon-random" src="images/random.svg">
+				<button class="icon icon-swap"></button>
+				<button class="icon icon-random"></button>
 				<div class="result-icons__screenshot">
-					<img class="icon icon-screenshot" src="images/screenshot.svg">
+					<button class="icon icon-screenshot">
 				</div>
 			</div>
 		</section>
