draft info content

--- a/src/index.html
+++ b/src/index.html
@@ -64,13 +64,24 @@
 	<section class="info">
 		<img class="info__close" src="images/info-close.svg">
 		<div class="info__inner">
-			<button class="background-backwards">&lt;bg</button>
-			<button class="background-forwards">bg&gt;</button>
-			<button class="background-random">bg rnd</button>
-			<div>current development progress: <span class="current-progress"></span> / 50+ talents</div>
-			<div>possible variations: <span class="possible-variations"></span></div>
-			<div>credits</div>
-			<div>links</div>
+			<h1>Background</h1>
+			<button class="background-backwards">&lt; prev</button>
+			<button class="background-forwards">next &gt;</button>
+			<button class="background-random">random</button>
+			<h1>Info</h1>
+			<p>Current development progress: <span class="current-progress"></span> / 40+ talents</p>
+			<p>Possible variations: <span class="possible-variations"></span></p>
+			<h1>Credits</h1>
+			<p>Made by vaexenc <a href="https://twitter.com/vaexenc">Twitter</a>, <a href="https://github.com/vaexenc">Github</a>, <a href="https://github.com/vaexenc/hololive-fusion-generator">Repository</a></p>
+			<p>smol ame graphics by <a href="https://twitter.com/walfieee">Walfie</a></p>
+			<p>Background graphics
+				<ul>
+					<li><a href="https://www.youtube.com/watch?v=DlZYG2NVaqo">hololive Alternative teaser video</a></li>
+					<li><a href="https://alt.hololive.tv/en">hololive Alternative website</a></li>
+				</ul>
+			</p>
+			<p><a href="https://en.hololive.tv">Hololive</a> / <a href="https://cover-corp.com/">Cover Corporation</a></p>
+			This is an independent fan project and is not affiliated with Hololive.
 		</div>
 	</section>
 </body>
