--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,10 @@
 					<div class="talent-select-name">
 						<div class="talent-select-name__name name">Name here</div>
 					</div>
-					<div class="talent-select-icons">
-						<button class="icon icon-up"></button>
-						<button class="icon icon-down"></button>
-						<button class="icon icon-random"></button>
+					<div class="talent-select-button-imgs">
+						<button class="button-img button-img-up"></button>
+						<button class="button-img button-img-down"></button>
+						<button class="button-img button-img-random"></button>
 					</div>
 				</div>
 			</div>
@@ -52,11 +52,11 @@
 		<section class="result-box box">
 			<canvas class="result-canvas" width="500" height="500"></canvas>
 			<div class="result-name name">Name here</div>
-			<div class="result-icons">
-				<button class="icon icon-swap"></button>
-				<button class="icon icon-random"></button>
-				<div class="result-icons__screenshot">
-					<button class="icon icon-screenshot">
+			<div class="result-button-imgs">
+				<button class="button-img button-img-swap"></button>
+				<button class="button-img button-img-random"></button>
+				<div class="result-button-imgs__screenshot">
+					<button class="button-img button-img-screenshot">
 				</div>
 			</div>
 		</section>
