replace info close <img> with <button>

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
 		</section>
 	</div>
 	<section class="info">
-		<img class="info__close" src="images/info-close.svg">
+		<button class="info__close"></button>
 		<div class="info__inner">
 			<h1>Background</h1>
 			<button class="background-backwards">&lt; prev</button>
