--- a/src/index.html
+++ b/src/index.html
@@ -64,24 +64,30 @@
 	<section class="info">
 		<button class="info__close"></button>
 		<div class="info__inner">
-			<h1>Background</h1>
-			<button class="background-backwards">&lt; prev</button>
-			<button class="background-forwards">next &gt;</button>
-			<button class="background-random">random</button>
+			<h1>Background Switcher</h1>
+			<button class="background-button background-backwards">&lt; prev</button>
+			<button class="background-button background-forwards">next &gt;</button>
+			<button class="background-button background-random">random</button>
 			<h1>Info</h1>
-			<p>Current development progress: <span class="current-progress"></span> / 40+ talents</p>
-			<p>Possible variations: <span class="possible-variations"></span></p>
+			<ul>
+				<li>Current development progress: <span style="white-space: nowrap;"><span class="current-progress"></span> / 40+ talents</span></li>
+				<li>Possible combinations: <span class="possible-variations"></span></li>
+			</ul>
 			<h1>Credits</h1>
-			<p>Made by vaexenc <a href="https://twitter.com/vaexenc">Twitter</a>, <a href="https://github.com/vaexenc">Github</a>, <a href="https://github.com/vaexenc/hololive-fusion-generator">Repository</a></p>
-			<p>smol ame graphics by <a href="https://twitter.com/walfieee">Walfie</a></p>
-			<p>Background graphics
-				<ul>
-					<li><a href="https://www.youtube.com/watch?v=DlZYG2NVaqo">hololive Alternative teaser video</a></li>
-					<li><a href="https://alt.hololive.tv/en">hololive Alternative website</a></li>
-				</ul>
-			</p>
-			<p><a href="https://en.hololive.tv">Hololive</a> / <a href="https://cover-corp.com/">Cover Corporation</a></p>
-			This is an independent fan project and is not affiliated with Hololive.
+			<ul>
+				<li>Made by vaexenc (<a href="https://github.com/vaexenc/hololive-fusion-generator">Repository</a>, <a href="https://twitter.com/vaexenc">Twitter</a>)</li>
+				<li>smol ame graphics by <a href="https://twitter.com/walfieee">Walfie</a></li>
+				<li>Background graphics:
+					<ul>
+						<li><a href="https://www.youtube.com/watch?v=DlZYG2NVaqo">Hololive Alternative teaser video</a></li>
+						<li><a href="https://alt.hololive.tv/en">Hololive Alternative website</a></li>
+					</ul>
+				</li>
+				<li><a href="https://en.hololive.tv">Hololive</a> / <a href="https://cover-corp.com/">Cover Corporation</a></li>
+				<li>Inspired by <a href="https://pokemon.alexonsager.net/">Pokemon Fusion</a></li>
+			</ul>
+			<br>
+			<p>This is an independent fan project and is not affiliated with Hololive.</p>
 		</div>
 	</section>
 </body>
