change info-button from <div> into <button>

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
 	<div class="background"></div>
 	<header class="header">
 		<div class="header__title">hololive fusion generator</div>
-		<div class="info-button"></div>
+		<button class="info-button"></button>
 	</header>
 	<div class="main">
 		<section class="result-box box">
