--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
 	</template>
 
 	<noscript>
-		<div class="no-script"><p class="no-script__text">Please enable Javascript</p></div>
+		<div class="no-script"><p class="no-script__text">(´・ω・`)<br>Please enable Javascript</p></div>
 	</noscript>
 
 	<div class="preload"></div>
