--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Create fusions of Hololive members.">
+	<meta name="author" content="vaexenc">
+	<meta property="og:title" content="Hololive Fusion Generator">
+	<meta property="og:description" content="Create fusions of Hololive members.">
+	<meta property="og:image" content="https://i.imgur.com/CN5bEvC.png">
+	<meta property="twitter:card" content="summary">
+	<meta property="twitter:image" content="https://i.imgur.com/CN5bEvC.png">
+	<meta property="twitter:title" content="Hololive Fusion Generator">
+	<meta property="twitter:creator" content="@vaexenc">
 	<title>Hololive Fusion Generator</title>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
