add author's other name to info

--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
 			</ul>
 			<h1>Credits</h1>
 			<ul>
-				<li>Made by vaexenc (<a href="https://github.com/vaexenc/hololive-fusion-generator">Repository</a>, <a href="https://twitter.com/vaexenc">Twitter</a>)</li>
+				<li>Made by venaura (vaexenc) (<a href="https://github.com/vaexenc/hololive-fusion-generator">Repository</a>, <a href="https://twitter.com/vaexenc">Twitter</a>)</li>
 				<li>smol ame graphics by <a href="https://twitter.com/walfieee">Walfie</a></li>
 				<li>Background graphics:
 					<ul>
