add backgrounds bg12 - bg27

--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,8 @@
 				<li>smol ame graphics by <a href="https://twitter.com/walfieee">Walfie</a></li>
 				<li>Background graphics:
 					<ul>
-						<li><a href="https://www.youtube.com/watch?v=DlZYG2NVaqo">Hololive Alternative teaser video</a></li>
+						<li><a href="https://www.youtube.com/watch?v=DlZYG2NVaqo">Hololive Alternative 30 sec teaser video</a></li>
+						<li><a href="https://www.youtube.com/watch?v=3RxlzJWWzdY">Hololive Alternative full teaser video</a></li>
 						<li><a href="https://alt.hololive.tv/en">Hololive Alternative website</a></li>
 					</ul>
 				</li>
