add title attributes to buttons

--- a/src/index.html
+++ b/src/index.html
@@ -32,9 +32,9 @@
 						<div class="talent-select-name__name name">Name here</div>
 					</div>
 					<div class="talent-select-button-imgs">
-						<button class="button-img button-img-up"></button>
-						<button class="button-img button-img-down"></button>
-						<button class="button-img button-img-random"></button>
+						<button class="button-img button-img-up" title="Previous"></button>
+						<button class="button-img button-img-down" title="Next"></button>
+						<button class="button-img button-img-random" title="Random"></button>
 					</div>
 				</div>
 			</div>
@@ -63,8 +63,8 @@
 			<canvas class="result-canvas" width="800" height="800"></canvas>
 			<div class="result-name name">Name here</div>
 			<div class="result-button-imgs">
-				<button class="button-img button-img-swap"></button>
-				<button class="button-img button-img-random"></button>
+				<button class="button-img button-img-swap" title="Swap"></button>
+				<button class="button-img button-img-random" title="Random"></button>
 				<div class="result-button-imgs__screenshot">
 					<button class="button-img button-img-screenshot">
 				</div>
