--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Create fusions of Hololive members.">
 	<meta name="author" content="vaexenc">
+	<meta name="darkreader" content="NO-DARKREADER-PLUGIN">
 	<meta property="og:title" content="Hololive Fusion Generator">
 	<meta property="og:description" content="Create fusions of Hololive members.">
 	<meta property="og:image" content="https://i.imgur.com/Wp7GA2B.png">
