add .info background image (mogu.webp)

--- a/src/index.html
+++ b/src/index.html
@@ -87,6 +87,7 @@
 			<ul>
 				<li>Made by venaura (vaexenc) (<a href="https://github.com/vaexenc/hololive-fusion-generator">Repository</a>, <a href="https://twitter.com/vaexenc">Twitter</a>)</li>
 				<li>smol ame graphics by <a href="https://twitter.com/walfieee">Walfie</a></li>
+				<li>Okayu sprite from <a href="https://www.youtube.com/watch?v=j6P_m6adkgc">もぐもぐYUMMY！</a></li>
 				<li>Background graphics:
 					<ul>
 						<li><a href="https://www.youtube.com/watch?v=DlZYG2NVaqo">Hololive Alternative 30 sec teaser video</a></li>
