remove unneeded font weights from google font Lato

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 		<title>Hololive Fusion Generator</title>
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Pacifico&family=Lato:wght@100;300;400;700;900&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Pacifico&family=Lato:wght@400;700&display=swap"
 			rel="stylesheet"
 		/>
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
