first step of avoiding hacky fix

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,8 @@
 	</template>
 
     <template class="template-talent-dropdown-category">
-        <div class="talent-dropdown-category__entry"></div>
+        <div class="talent-dropdown-category__entry">
+            <div class="talent-dropdown-entries__category__name"></div>
 		</div>
     </template>
 
@@ -53,7 +54,6 @@
         <div class="talent-dropdown-entries__entry">
             <div class="talent-dropdown-entries__entry__image"></div>
             <div class="talent-dropdown-entries__entry__name"></div>
-        </div>
         </div>
     </template>
 
