Update README, copyright CoverCorp.

--- a/src/index.html
+++ b/src/index.html
@@ -96,6 +96,7 @@
                         <h1>Credits</h1>
                         <ul>
                             <li>Made by venaura (vaexenc) (<a href="https://github.com/vaexenc/hololive-fusion-generator">Repository</a>, <a href="https://twitter.com/vaexenc">Twitter</a>)</li>
+                            <li>Contributed by Zak (gsproduction727) (<a href="https://github.com/gsproduction727/hololive-fusion-generator">Repository</a>, Discord: Zak#0955)</li>
                             <li>smol ame graphics by <a href="https://twitter.com/walfieee">Walfie</a></li>
                             <li>Background graphics:
                                 <ul>
@@ -109,6 +110,7 @@
                         </ul>
                         <br>
                         <p>This is an independent fan project and is not affiliated with Hololive.</p>
+                        <p>All talents are Copyright©2016 COVER Corp.</p>
                     </div>
         </section>
 </body>
