--- a/src/index.html
+++ b/src/index.html
@@ -63,10 +63,16 @@
 		<div class="main">
 			<section class="result-box box">
 				<canvas class="result-canvas" width="800" height="800"></canvas>
-				<div class="result-name name">Name here</div>
+				<div class="result-name-container">
+					<div class="result-name name">Name here</div>
+					<div class="result-name-copy name">Name here</div>
+				</div>
 				<div class="result-button-imgs">
 					<button class="button-img button-img-swap" title="Swap"></button>
 					<button class="button-img button-img-random" title="Random"></button>
+					<div class="button-img-unitinu-container">
+						<button class="button-img button-img-unitinu" title="Mirror"></button>
+					</div>
 				</div>
 			</section>
 		</div>
@@ -86,7 +92,7 @@
 						>
 					</li>
 					<li>
-						Possible combinations:
+						Possible combinations (without mirroring):
 						<span class="possible-variations"></span>
 					</li>
 				</ul>
