--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
 							</div>
 						</div>
 						<div class="talent-select-name">
-							<div class="talent-select-name__name name">Name here</div>
+							<div class="talent-select-name__name name"></div>
 						</div>
 						<div class="talent-select-button-imgs">
 							<button class="button-img button-img-up" title="Previous"></button>
@@ -64,8 +64,8 @@
 			<section class="result-box box">
 				<canvas class="result-canvas" width="800" height="800"></canvas>
 				<div class="result-name-container">
-					<div class="result-name name">Name here</div>
-					<div class="result-name-copy name">Name here</div>
+					<div class="result-name name"></div>
+					<div class="result-name-copy name"></div>
 				</div>
 				<div class="result-button-imgs">
 					<button class="button-img button-img-swap" title="Swap"></button>
