rework heading elements

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
 		</noscript>
 		<div class="background"></div>
 		<header class="header">
-			<div class="header__title">hololive fusion generator</div>
+			<h1 class="header__title">Hololive Fusion Generator</h1>
 			<button class="info-button"></button>
 		</header>
 		<div class="main">
@@ -79,11 +79,11 @@
 		<section class="info">
 			<button class="info__close"></button>
 			<div class="info__inner">
-				<h1>Background Switcher</h1>
+				<h2>Background Switcher</h2>
 				<button class="background-button background-backwards">&lt; prev</button>
 				<button class="background-button background-forwards">next &gt;</button>
 				<button class="background-button background-random">random</button>
-				<h1>Info</h1>
+				<h2>Info</h2>
 				<ul>
 					<li>
 						Current development progress:
@@ -96,7 +96,7 @@
 						<span class="possible-variations"></span>
 					</li>
 				</ul>
-				<h1>Credits</h1>
+				<h2>Credits</h2>
 				<ul>
 					<li>
 						Made by venaura (vaexenc) (<a
