change .main to <main>

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
 			<h1 class="header__title">Hololive Fusion Generator</h1>
 			<button class="info-button"></button>
 		</header>
-		<div class="main">
+		<main>
 			<section class="result-box box">
 				<canvas class="result-canvas" width="800" height="800"></canvas>
 				<div class="result-name-container">
@@ -75,7 +75,7 @@
 					</div>
 				</div>
 			</section>
-		</div>
+		</main>
 		<section class="info">
 			<button class="info__close"></button>
 			<div class="info__inner">
