update <meta> image (from calli + gura to ollie + gura)

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
 		<meta name="darkreader" content="NO-DARKREADER-PLUGIN" />
 		<meta property="og:title" content="Hololive Fusion Generator" />
 		<meta property="og:description" content="Create fusions of Hololive members." />
-		<meta property="og:image" content="https://i.imgur.com/Wp7GA2B.png" />
+		<meta property="og:image" content="https://i.imgur.com/Q2ygawA.png" />
 		<meta property="twitter:card" content="summary" />
-		<meta property="twitter:image" content="https://i.imgur.com/Wp7GA2B.png" />
+		<meta property="twitter:image" content="https://i.imgur.com/Q2ygawA.png" />
 		<meta property="twitter:title" content="Hololive Fusion Generator" />
 		<meta property="twitter:creator" content="@vaexenc" />
 		<title>Hololive Fusion Generator</title>
