change <meta> description

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,17 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="Create fusions of Hololive members." />
+		<meta
+			name="description"
+			content="Create wacky fusions of Hololive characters with magical ease."
+		/>
 		<meta name="author" content="vaexenc" />
 		<meta name="darkreader" content="NO-DARKREADER-PLUGIN" />
 		<meta property="og:title" content="Hololive Fusion Generator" />
-		<meta property="og:description" content="Create fusions of Hololive members." />
+		<meta
+			property="og:description"
+			content="Create wacky fusions of Hololive characters with magical ease."
+		/>
 		<meta property="og:image" content="https://i.imgur.com/Q2ygawA.png" />
 		<meta property="twitter:card" content="summary" />
 		<meta property="twitter:image" content="https://i.imgur.com/Q2ygawA.png" />
