adjust author name in info modal

--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,7 @@
 				<h2>Credits</h2>
 				<ul>
 					<li>
-						Made by venaura (vaexenc) (<a
+						Made by vaexenc (<a
 							href="https://github.com/vaexenc/hololive-fusion-generator"
 							>Repository</a
 						>, <a href="https://twitter.com/vaexenc">Twitter</a>)
